# niba2.0

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  NibaClient.vcxproj  NibaClient.vcxproj.filters  NibaServer.sln  NibaServer.vcxproj  NibaServer.vcxproj.filters  README.md  character.json  cmake_install.cmake  rebuild.sh  testscript
client/: NibaClient.sln  NibaClient.vcxproj  NibaClient.vcxproj.filters  cert_loader.hpp  client_gamedata.cpp  client_gamedata.h  client_processor.cpp  client_processor.h  client_session.cpp  client_session.h  cmd_parser.cpp  cmd_parser.h  cmd_processor.cpp  cmd_processor.h  main.cpp
schemas/: niba_player.sql  niba_static.sql
server/: Listener.cpp  Listener.h  NibaServer.sln  NibaServer.vcxproj  NibaServer.vcxproj.filters  Server.cpp  Server.h  Session.cpp  Session.h  cert_loader.hpp  config.h  connector.h  data_init.cpp  data_init.h  db_accessor.cpp  db_accessor.cpp~  db_accessor.h  db_accessor.h~  logger.cpp  logger.h  main.cpp  request_dispatcher.cpp  request_dispatcher.h  server_gamedata.cpp  server_gamedata.h  server_processor.cpp  server_processor.h  server_session.cpp  server_session.h  session_map.cpp  session_map.h
shared/: basic_types.h  calcdelay.h  client_gamedata.cpp  client_gamedata.h  client_request.cpp  client_request.h  fight.cpp  fight.h  gamedata.cpp  gamedata.h  gen_structs.py  global_defs.h  message.cpp  message.h  request_dispatcher.h  rng.h  server_gamedata.cpp  server_gamedata.h  sessiondata.h  structs.cpp  structs.h  structs.yaml  util.cpp  util.h  utils.cpp  utils.h
staticdata/: character.json  equipment.json  magic.json
test/: config.json  test_latency.py
